Prevent various inline editors from vertically shifting on open/close.
The inline editors in various places (replies to reviews/comments and in
the new review dialog) would shift a bit vertically when opening or
closing the editor. This was due to the pencil disappearing and the line
height shrinking where it used to be.

We had this solved for banners. Now, that solution is contained in a
macro, which is used in the other cases where we display these.

Reviewed at https://reviews.reviewboard.org/r/6446/

--- a/reviewboard/static/rb/css/pages/reviews.less
+++ b/reviewboard/static/rb/css/pages/reviews.less
@@ -9,6 +9,13 @@
  * Review-specific macros
  ****************************************************************************/
 
+/* Keep the label from shifting when the pencil icon is hidden/shown. */
+.inline-editor-label() {
+  display: block;
+  line-height: 16px;
+  vertical-align: top;
+}
+
 .rich-text-loading() {
   color: transparent;
   background: white url("@{img_base}/spinner.gif") no-repeat @box-padding @box-padding;
@@ -23,11 +30,15 @@
 
   dl {
     dt {
-      label a {
-        color: #AB5603;
-        font-size: 1.1em;
-        font-weight: bold;
-        text-decoration: none;
+      label {
+        .inline-editor-label();
+
+        a {
+          color: #AB5603;
+          font-size: 1.1em;
+          font-weight: bold;
+          text-decoration: none;
+        }
       }
 
       span {
@@ -1206,6 +1217,10 @@
   .edit-field {
     margin: 1em 0;
 
+    label {
+      .inline-editor-label();
+    }
+
     textarea {
       background-color: @textarea-editor-background;
       border: @textarea-border;
@@ -1832,10 +1847,7 @@
 #discard-banner,
 #submitted-banner {
   label {
-    /* Keep the label from shifting when the pencil icon is hidden/shown. */
-    display: block;
-    line-height: 16px;
-    vertical-align: top;
+    .inline-editor-label();
   }
 
   &>p {
